k8s/base/product-service/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: product-service
spec:
  podSelector:
    matchLabels:
      app: product-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: store-front
        - podSelector:
            matchLabels:
              app: store-admin
      ports:
        - port: 3002
          protocol: TCP
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    # ai-service
    - to:
        - podSelector:
            matchLabels:
              app: ai-service
      ports:
        - port: 5001
          protocol: TCP
